# mercury

./: Cargo.toml  README.md
mercury/: Cargo.toml
protocol/: Cargo.toml
protocol/src/: config.rs  connection.rs  datagram.rs  delivery.rs  endpoint.rs  errors.rs  guarantees.rs  headers.rs  lib.rs  metrics.rs  segment.rs  sequence_buffer.rs  stream.rs  streams.rs
